# Disk-Analyzer

./: .gitattributes  .gitignore  README.md
backend/: Cargo.toml
backend/src/: api.rs  error.rs  main.rs  models.rs  scanner.rs
frontend/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
frontend/design-system/disk-analyzer/: MASTER.md
frontend/src/components/: DriveSelector.tsx  FolderList.tsx  MainApp.tsx  ScanProgress.tsx  TreemapVisualizer.tsx
frontend/src/lib/: api.ts  heuristics.ts  types.ts
frontend/src/pages/: index.astro
