[package]
name = "disk-analyzer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "disk-analyzer"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.30"
uuid = { version = "1", features = ["v4"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tower = "0.4"
axum-extra = { version = "0.9", features = ["typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
trash = "4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
